
shared_DATA = \
	phbx_logo.png\
	phbx_logo_overlay.png\
	phbx_snd.ogg\
	copyright.txt\
	ptr.png\
	balls1.png\
	balls2.png\
	cb.png\
	bonus1.png\
	bonus2.png\
	bonus3.png\
	bonus4.png\
	bonus5.png\
	explosion.png\
	logo.png\
	gpl3.png\
	font1.ttf\
	player.png\
	FreeSans.ttf\
	FreeMonoBold.ttf\
	mus1.ogg\
	mus2.ogg\
	mus3.ogg\
	mus4.ogg\
	pull.ogg\
	push.ogg\
	ouch.ogg\
	combo.ogg\
	eliminate.ogg\
	roll.ogg\
	bonus.ogg\
	extraball.ogg\
	extralife.ogg\
	timebonus.wav\
	newcolor.ogg\
	failedlevel.ogg\
	menu.lvl\
	levels.list\
	level1.lvl\
	level1.jpg\
	level1_thumb.jpg\
	level2.lvl\
	level2.jpg\
	level2_thumb.jpg\
	level3.lvl\
	level3.jpg\
	level3_thumb.jpg\
	level4.lvl\
	level4.jpg\
	level4_thumb.jpg\
	level5.lvl\
	level5.jpg\
	level5_thumb.jpg\
	level6.lvl\
	level6.jpg\
	level6_thumb.jpg\
	level7.lvl\
	level7.jpg\
	level7_thumb.jpg\
	level8.lvl\
	level8.jpg\
	level8_thumb.jpg\
	level9.lvl\
	level9.jpg\
	level9_thumb.jpg\
	level10.lvl\
	level10.jpg\
	level10_thumb.jpg\
	level11.lvl\
	level11.jpg\
	level11_thumb.jpg\
	level12.lvl\
	level12.jpg\
	level12_thumb.jpg\
	level12_overlay.png\
	level13.lvl\
	level13.jpg\
	level13_thumb.jpg\
	level13_overlay.png\
	level14.lvl\
	level14.jpg\
	level14_thumb.jpg\
	level14_overlay.png\
	level15.lvl\
	level15.jpg\
	level15_thumb.jpg\
	level16.lvl\
	level16.jpg\
	level16_thumb.jpg\
	level16_overlay.png\
	level17.lvl\
	level17.jpg\
	level17_thumb.jpg\
	level17_overlay.png\
	level18.lvl\
	level18.jpg\
	level18_thumb.jpg\
	level19.lvl\
	level19.jpg\
	level19_thumb.jpg\
	level19_overlay.png\
	level20.lvl\
	level20.jpg\
	level20_thumb.jpg\
	level20_overlay.png\
	level21.lvl\
	level21.jpg\
	level21_thumb.jpg\
	level21_overlay.png\
	level22.lvl\
	level22.jpg\
	level22_thumb.jpg\
	level23.lvl\
	level23.jpg\
	level23_thumb.jpg\
	level23_overlay.png\
	pro.set\
	easy.set

shareddir = \
	$(pkgdatadir)

EXTRA_DIST = \
	$(shared_DATA)


## File created by the gnome-build tools
